JSAI/error/src/test/resources/base/v030.js

var x = 0 instanceof Array;
print(x);